fix (locations): fix launch locations name wrapping

--- a/src/app/widgets/multiselect-dropdown/components/dropdown/multi-select-dropdown.component.scss
+++ b/src/app/widgets/multiselect-dropdown/components/dropdown/multi-select-dropdown.component.scss
@@ -25,6 +25,7 @@
   }
 
   &__list {
+    white-space: normal;
     border-radius: 3px;
     background-color: $color-neutral;
     position: absolute;
